scrollbar border fix

--- a/chromesoul.css
+++ b/chromesoul.css
@@ -253,7 +253,6 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-    /*background-color: #e4e4e4;*/
     background-color: transparent;
 }
 
@@ -264,8 +263,7 @@ body {
 ::-webkit-scrollbar-thumb {
     height: 40px;
     background-color: #347db0;
-    border-left: 1px solid #e4e4e4;
-    border-right: 1px solid #e4e4e4;
+    border: 1px solid #e4e4e4;
 }
 
 ::-webkit-resizer {
